# melodymaker-ai

./: .gitignore  ARCHITECTURE.md  QUICK_TEST.md  README.md  SETUP.md
.github/screenshots/: .gitkeep  README.md
backend/: README.md  main.py  pyproject.toml
examples/: 01-simple-generation.md  02-audio-player.md  03-inngest-background-job.md  README.md
frontend/: .env.example  README.md  next.config.js  package.json  pnpm-lock.yaml
frontend/prisma/: schema.prisma
frontend/src/: env.js
frontend/src/actions/: comment.ts  download.ts  favorite.ts  follow.ts  generation.ts  history.ts  playlist.ts  profile.ts  remix.ts  search.ts  song.ts
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(main)/: layout.tsx  page.tsx
frontend/src/app/(main)/analytics/: page.tsx
frontend/src/app/(main)/create/: page.tsx
frontend/src/app/(main)/customer-portal/: page.tsx
frontend/src/components/: back-button.tsx  providers.tsx  song-actions.tsx  sound-bar.tsx
frontend/src/components/create/: rename-dialog.tsx  song-panel.tsx  track-list-fetcher.tsx  track-list.tsx
frontend/src/components/history/: history-list.tsx
frontend/src/components/home/: song-card.tsx
frontend/src/components/playlists/: playlist-grid.tsx
frontend/src/components/profile/: follow-button.tsx
frontend/src/components/sidebar/: app-sidebar.tsx  breadcrumb-page-client.tsx  credits.tsx  sidebar-menu-items.tsx  upgrade.tsx
frontend/src/inngest/: client.ts  functions.ts
frontend/src/lib/: auth.ts
frontend/src/server/: db.ts
frontend/src/styles/: globals.css
(+8 files in other folders)
