[project]
name = "melodymaker-ai-backend"
version = "1.0.0"
description = "Backend for MelodyMakerAI - AI Music Generation Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.39",
    "diffusers>=0.35.1",
    "modal>=1.1.4",
    "pydantic>=2.11.9",
    "requests>=2.32.5",
    "torch>=2.8.0",
    "transformers>=4.56.2",
]

[dependency-groups]
dev = []
